# mt940

./: .gitlab-ci.yml  .hgtags  CHANGELOG  COPYRIGHT  MANIFEST.in  README  README.rst  pyproject.toml  setup.py  tox.ini
mt940/: MT940-optional.txt  MT940.txt  __init__.py  test.py  test_readme.py
